--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,8 +14,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ProgressIndicator?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" maxHeight="1.7976931348623157E308"
       maxWidth="1.7976931348623157E308" styleClass="login-root" xmlns="http://javafx.com/javafx/11.0.1"
       fx:controller="com.faforever.client.login.LoginController"
@@ -57,7 +57,7 @@
                 <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="Infinity" spacing="5.0"
                       VBox.vgrow="ALWAYS">
                     <children>
-                        <WebView fx:id="loginWebView" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
+                        <WebView fx:id="loginWebView" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="800"/>
                         <HBox maxWidth="500" alignment="CENTER" VBox.vgrow="NEVER" spacing="10.0">
                             <children>
                                 <Label maxHeight="1.7976931348623157E308" minWidth="-Infinity"
