Fix test classes and fxml

--- a/src/main/resources/theme/chat/private_chat_tab.fxml
+++ b/src/main/resources/theme/chat/private_chat_tab.fxml
@@ -21,7 +21,7 @@
                     <ScrollPane fx:id="gameDetailScrollPane" fitToWidth="true" maxHeight="1.7976931348623157E308"
                                 maxWidth="1.7976931348623157E308" SplitPane.resizableWithParent="false">
                         <content>
-                            <fx:include fx:id="privateUserInfo" source="private_user_info.fxml"/>
+                            <fx:include fx:id="privatePlayerInfoController" source="private_user_info.fxml"/>
                         </content>
                     </ScrollPane>
                 </items>
