Specify missing colors and remove unused css class

--- a/src/main/resources/theme/colors.css
+++ b/src/main/resources/theme/colors.css
@@ -1,6 +1,9 @@
 .root {
   -fx-base: #212121;
   -fx-accent: #2b71d9;
+  -fx-light-text-color: #DCDCDC;
+  -fx-background: #212121;
+  -fx-text-background-color: #DCDCDC;
 
   -unread: derive(#00ff00, 80%);
 
