Show announcements and offline services on login page

--- a/src/main/resources/theme/colors.css
+++ b/src/main/resources/theme/colors.css
@@ -11,6 +11,8 @@
   -warn: #ff9800;
   -bad: #f44336;
 
+  -warn-transparent: #ff98001a;
+
   AEON_COLOR: #4caf50;
   CYBRAN_COLOR: #f44336;
   UEF_COLOR: #2196f3;
