--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_queue_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_queue_card.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="queueItemRoot" xmlns="http://javafx.com/javafx/11.0.1"
       fx:controller="com.faforever.client.teammatchmaking.MatchmakingQueueItemController"
       spacing="10.0" HBox.hgrow="ALWAYS" alignment="TOP_CENTER">
-        <ToggleButton fx:id="joinLeaveQueueButton" styleClass="tmm, queue" alignment="TOP_LEFT" text="&lt;QueueName&gt;"
+        <ToggleButton fx:id="joinLeaveQueueButton" styleClass="tmm, queue" alignment="TOP_CENTER" text="&lt;QueueName&gt;"
                       maxWidth="1.7976931348623157E308" onAction="#onJoinLeaveQueueClicked" />
-        <Button fx:id="mapPoolButton" text="%teammatchmaking.mapPool" styleClass="tmm, player-card-text, map-pool" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308"
+        <Button fx:id="mapPoolButton" text="%teammatchmaking.mapPool" styleClass="tmm, player-card-text, map-pool" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308"
         onAction="#showMapPool"/>
     <FlowPane hgap="10">
         <Label fx:id="queuePopTimeLabel" styleClass="player-card-text" text="%teammatchmaking.queuePopTimer"/>
