Add version label to map card and show all versions of owned maps

--- a/src/main/resources/theme/vault/map/map_card.fxml
+++ b/src/main/resources/theme/vault/map/map_card.fxml
@@ -52,8 +52,12 @@
           <children>
               <Label fx:id="nameLabel" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" styleClass="card-title"
                      text="Long text to test whether it's being wrapped" wrapText="true"/>
-              <Label fx:id="authorLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="card-subtitle"
-                     text="Label" wrapText="true"/>
+              <HBox spacing="10.0">
+                  <Label fx:id="authorLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="card-subtitle"
+                         text="Label" wrapText="true"/>
+                  <Label fx:id="versionLabel" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" styleClass="card-subtitle"
+                         text="Label" />
+              </HBox>
           </children>
       </VBox>
       <Label fx:id="numberOfPlaysLabel" text="Label" GridPane.columnSpan="2" GridPane.rowIndex="1">
