--- a/src/main/resources/theme/play/coop/coop.fxml
+++ b/src/main/resources/theme/play/coop/coop.fxml
@@ -1,87 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import java.lang.Integer?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
-<?import java.lang.Integer?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="coopRoot" hgap="20.0" maxHeight="1.7976931348623157E308"
-          maxWidth="1.7976931348623157E308" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.141"
-          fx:controller="com.faforever.client.coop.CoopController">
+
+<GridPane fx:id="coopRoot" gridLinesVisible="true" hgap="10.0" xmlns="http://javafx.com/javafx/16"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.coop.CoopController">
     <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
-        <ColumnConstraints/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="55.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="45.0" prefWidth="100.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-        <RowConstraints vgrow="NEVER" />
-        <RowConstraints minHeight="10.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <children>
-        <Label styleClass="h2" text="%coop.leaderboard" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-        <WebView fx:id="descriptionWebView" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+        <VBox spacing="10.0">
             <children>
-                <TextField fx:id="titleTextField" maxWidth="1.7976931348623157E308" promptText="%game.create.title"
-                              styleClass="game-title-input"/>
-                <PasswordField fx:id="passwordTextField" maxWidth="1.7976931348623157E308"
-                                  promptText="%game.create.password"/>
-                <Button fx:id="playButton" defaultButton="true" maxWidth="1.7976931348623157E308"
-                           mnemonicParsing="false" onAction="#onPlayButtonClicked" text="%coop.host.button"/>
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
+                    <children>
+                        <TextField fx:id="titleTextField" maxWidth="1.7976931348623157E308"
+                                   promptText="%game.create.title" styleClass="game-title-input"/>
+                        <PasswordField fx:id="passwordTextField" maxWidth="1.7976931348623157E308"
+                                       promptText="%game.create.password"/>
+                        <AnchorPane>
+                            <children>
+                                <ComboBox fx:id="missionComboBox" minWidth="75.0" AnchorPane.leftAnchor="0.0"
+                                          AnchorPane.rightAnchor="150.0"/>
+                                <Button fx:id="playButton" defaultButton="true" layoutX="310.0" mnemonicParsing="false"
+                                        onAction="#onPlayButtonClicked" text="%coop.host.button"
+                                        AnchorPane.rightAnchor="0.0"/>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                    <VBox.margin>
+                        <Insets top="10.0"/>
+                    </VBox.margin>
+                </VBox>
+                <Separator/>
+                <WebView fx:id="descriptionWebView" maxHeight="-1.0" minHeight="100.0" minWidth="-1.0"
+                         prefHeight="200.0" prefWidth="-1.0"/>
+                <Separator/>
+                <Label styleClass="h2" text="%coop.openGames"/>
+                <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308"
+                            maxWidth="1.7976931348623157E308" minWidth="0.0" VBox.vgrow="ALWAYS"/>
             </children>
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
         </VBox>
-        <ImageView fx:id="mapImageView" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2" GridPane.valignment="CENTER" />
-        <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                    minWidth="0.0" GridPane.columnIndex="2" GridPane.rowIndex="4"/>
-        <ComboBox fx:id="missionComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"/>
-        <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%coop.host.title" GridPane.columnIndex="2" />
-        <Label styleClass="h2" text="%coop.openGames" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-        <Separator prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2" />
-        <TableView fx:id="leaderboardTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2" GridPane.rowIndex="4">
-            <columns>
-                <TableColumn fx:id="rankColumn" editable="false" maxWidth="64.0" minWidth="24.0" prefWidth="32.0"
-                             sortable="false" text="%coop.leaderboard.rank"/>
-                <TableColumn fx:id="playerCountColumn" editable="false" maxWidth="1000.0" minWidth="24.0" prefWidth="50.0" sortable="false" text="%coop.leaderboard.players" />
-                <TableColumn fx:id="playerNamesColumn" editable="false" minWidth="24.0" prefWidth="-1.0" sortable="false" text="%coop.leaderboard.names" />
-                <TableColumn fx:id="secondaryObjectivesColumn" editable="false" maxWidth="1000.0" minWidth="24.0" prefWidth="-1.0" sortable="false" text="%coop.leaderboard.secondary" />
-                <TableColumn fx:id="timeColumn" editable="false" maxWidth="1000.0" minWidth="24.0" prefWidth="-1.0" sortable="false" text="%coop.leaderboard.time" />
-                <TableColumn fx:id="replayColumn" editable="false" maxWidth="1000.0" minWidth="50.0" prefWidth="-1.0" sortable="false" text="%coop.leaderboard.replay" />
-            </columns>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
-        <ComboBox fx:id="numberOfPlayersComboBox" GridPane.columnIndex="1" GridPane.halignment="RIGHT"
-                     GridPane.rowIndex="3">
-            <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <Integer fx:value="0" />
-                    <Integer fx:value="1" />
-                    <Integer fx:value="2" />
-                    <Integer fx:value="3" />
-                    <Integer fx:value="4" />
-                </FXCollections>
-            </items>
-        </ComboBox>
+        <VBox spacing="10.0" GridPane.columnIndex="1">
+            <children>
+                <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                    <children>
+                        <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%coop.leaderboard"
+                               HBox.hgrow="ALWAYS"/>
+                        <ComboBox fx:id="numberOfPlayersComboBox" HBox.hgrow="NEVER">
+                            <items>
+                                <FXCollections fx:factory="observableArrayList">
+                                    <Integer fx:value="0"/>
+                                    <Integer fx:value="1"/>
+                                    <Integer fx:value="2"/>
+                                    <Integer fx:value="3"/>
+                                    <Integer fx:value="4"/>
+                                </FXCollections>
+                            </items>
+                        </ComboBox>
+                    </children>
+                    <padding>
+                        <Insets left="10.0" right="10.0"/>
+                    </padding>
+                </HBox>
+                <TableView fx:id="leaderboardTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                           VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn fx:id="rankColumn" editable="false" maxWidth="64.0" minWidth="24.0"
+                                     prefWidth="32.0" sortable="false" text="%coop.leaderboard.rank"/>
+                        <TableColumn fx:id="playerCountColumn" editable="false" maxWidth="1000.0" minWidth="24.0"
+                                     prefWidth="50.0" sortable="false" text="%coop.leaderboard.players"/>
+                        <TableColumn fx:id="playerNamesColumn" editable="false" minWidth="24.0" prefWidth="-1.0"
+                                     sortable="false" text="%coop.leaderboard.names"/>
+                        <TableColumn fx:id="secondaryObjectivesColumn" editable="false" maxWidth="1000.0"
+                                     minWidth="24.0" prefWidth="-1.0" sortable="false"
+                                     text="%coop.leaderboard.secondary"/>
+                        <TableColumn fx:id="timeColumn" editable="false" maxWidth="1000.0" minWidth="24.0"
+                                     prefWidth="-1.0" sortable="false" text="%coop.leaderboard.time"/>
+                        <TableColumn fx:id="replayColumn" editable="false" maxWidth="1000.0" minWidth="50.0"
+                                     prefWidth="-1.0" sortable="false" text="%coop.leaderboard.replay"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </VBox>
     </children>
-    <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-    </padding>
 </GridPane>
