--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -44,7 +44,9 @@
                                         <Region styleClass="icon,search-icon" />
                                     </graphic>
                                 </Label>
-                                <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" promptText="%leaderboard.searchPrompt" styleClass="search" />
+                                <TextField fx:id="searchTextField" maxWidth="1.7976931348623157E308" minWidth="150.0"
+                                           prefWidth="150.0" promptText="%leaderboard.searchPrompt"
+                                           onAction="#processSearchInput" styleClass="search"/>
                             </HBox>
                         </children>
                     </HBox>
