--- a/src/main/resources/theme/chat/private_chat_tab.fxml
+++ b/src/main/resources/theme/chat/private_chat_tab.fxml
@@ -7,17 +7,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.Region?>
 <Tab xmlns:fx="http://javafx.com/fxml/1" fx:id="privateChatTabRoot" xmlns="http://javafx.com/javafx/8.0.111"
-     fx:controller="com.faforever.client.chat.PrivateChatTabController" styleClass="private-channel-tab">
+     fx:controller="com.faforever.client.chat.PrivateChatTabController">
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
         <children>
             <SplitPane dividerPositions="0.8" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                 <items>
-                    <AnchorPane>
-                        <WebView fx:id="messagesWebView" minHeight="100.0" minWidth="100.0" prefHeight="-1.0"
-                                 prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                 AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-                    </AnchorPane>
+                    <VBox>
+                        <AnchorPane VBox.vgrow="ALWAYS">
+                            <WebView fx:id="messagesWebView" minHeight="100.0" minWidth="100.0" prefHeight="-1.0"
+                                     prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                        </AnchorPane>
+                        <StackPane>
+                            <children>
+                                <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308"
+                                           onAction="#onSendMessage"
+                                           promptText="%chat.messagePrompt" styleClass="channel-chat-text-field">
+                                </TextField>
+                                <Button fx:id="emoticonsButton" mnemonicParsing="false"
+                                        onAction="#openEmoticonsPopupWindow"
+                                        styleClass="open-emoticons-window" StackPane.alignment="CENTER_RIGHT">
+                                    <graphic>
+                                        <Region styleClass="icon,friend-icon"/>
+                                    </graphic>
+                                </Button>
+                            </children>
+                        </StackPane>
+                    </VBox>
                     <ScrollPane fx:id="gameDetailScrollPane" fitToWidth="true" maxHeight="1.7976931348623157E308"
                                 maxWidth="1.7976931348623157E308" SplitPane.resizableWithParent="false">
                         <content>
@@ -26,8 +46,7 @@
                     </ScrollPane>
                 </items>
             </SplitPane>
-            <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage"
-                          promptText="%chat.messagePrompt"/>
+
         </children>
     </VBox>
 </Tab>
